--- a/Scarb.toml
+++ b/Scarb.toml
@@ -6,6 +6,9 @@ cairo-version = "2.11.4"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
+[cairo]
+inlining-strategy = "avoid"
+
 [dependencies]
 
 [dev-dependencies]
